# muh

./: ChangeLog  INSTALL  Makefile.am  configure.ac  mkinstalldirs
doc/: Makefile.am  muh.texinfo
misc/: Makefile.am  muh-check  muh-rotatelog  muhrc.in
src/: Makefile.am  ascii.c  ascii.h  channels.c  channels.h  commands.c  commands.h  common.c  common.h  dcc.c  dcc.h  dlink.c  dlink.h  ignore.c  ignore.h  irc.c  irc.h  lexer.c  lexer.l  log.c  log.h  match.c  match.h  messages.h  muh.c  muh.h  parser.c  parser.y  perm.c  perm.h  table.c  table.h  tools.c  tools.h
